# flic2-esp32-s3-hub

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.sh
bluetooth/: bluetooth_service.py  bluetooth_service_cleanup.py  bluetooth_service_flash.py
firmware/esp32-flic-project/: CMakeLists.txt  partitions.csv  reset_build.ps1  sdkconfig  sdkconfig.defaults
firmware/esp32-flic-project/components/flic2/: CMakeLists.txt  flic2_esp32.c
firmware/esp32-flic-project/components/flic2/include/: flic2_esp32.h
firmware/esp32-flic-project/flic2lib-c-module-main/: flic2.c  flic2.h
firmware/esp32-flic-project/main/: CMakeLists.txt  idf_component.yml  main.c
log/: log.py
